--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "baglamagram-ai",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "formidable": "^3.5.1"
